minikubes/klaus-hello-world/k8s2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
   - host: hello-world.info
     http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: klaus-hello-world-service
                port: 
                  number: 8080
          - pathType: Prefix
            path: /v2
            backend:
              service:
                name: klaus-hello-world-service
                port: 
                  number: 8080
          - pathType: Exact
            path: /v3
            backend:
              service:
                name: klaus-hello-world-service
                port: 
                  number: 8080
